Use bootstrap tables

--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -11,6 +11,10 @@
   <script src="{{ host_prefix }}/static/js/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/popper.min.js"></script>
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="{{ host_prefix }}/static/css/bootstrap-table.min.css">
+  <link rel="stylesheet" href="{{ host_prefix }}/static/css/bootstrap-icons.css">
+  <script src="{{ host_prefix }}/static/js/bootstrap-table.min.js"></script>
 </head>
 
 <body>
@@ -31,7 +35,7 @@
       <li class="nav-item" role="presentation">
         <a class="nav-link active" id="pills-datasets-tab" data-bs-toggle="pill" href="#pills-download" role="tab"
           aria-controls="pills-download"><img src="{{ host_prefix }}/static/img/download.png" height="30px"
-            class="heading-img-inline">Datasets for download</a>
+            class="heading-img-inline">External datasets</a>
       </li>
       <li class="nav-item" role="presentation">
         <a class="nav-link" id="pills-datasets-tab" data-bs-toggle="pill" href="#pills-datasets" role="tab"
