--- a/factgenie/templates/forms/add_dataset_modal.html
+++ b/factgenie/templates/forms/add_dataset_modal.html
@@ -98,7 +98,7 @@
                                 <code>loaders/datasets_local.yaml</code>.
                             </p>
 
-                            <p>You can either select from pre-existing classes (see <code>loaders/base.py</code>) or
+                            <p>You can either select from pre-existing classes (see <code>loaders/basic.py</code>) or
                                 create a loader in
                                 <code>loaders</code>
                                 (subclassing the <code>Dataset</code> class).
