Add remaining datasets, enable default download implementation using data-link and outputs-link

--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -77,6 +77,9 @@
                   {% endfor %}
                 </td>
                 <td>
+                  {% if not dataset.outputs %}
+                  -
+                  {% endif %}
                   {% for output in dataset.outputs %}
                   <a class="badge bg-light text-dark">{{ output }}</a>
                   {% endfor %}
