Start outsourcing self-contained JS functions to utils.js

--- a/factgenie/templates/analyze.html
+++ b/factgenie/templates/analyze.html
@@ -167,3 +167,4 @@
   window.mode = "analyze";
 </script>
 <script src="{{ host_prefix }}/static/js/analyze.js"></script>
+<script src="{{ host_prefix }}/static/js/utils.js"></script>
