--- a/factgenie/templates/campaigns/closed.html
+++ b/factgenie/templates/campaigns/closed.html
@@ -56,3 +56,4 @@
 </script>
 
 <script src="{{ host_prefix }}/static/js/factgenie.js"></script>
+<script src="{{ host_prefix }}/static/js/utils.js"></script>
