--- a/factgenie/templates/llm_campaign.html
+++ b/factgenie/templates/llm_campaign.html
@@ -84,3 +84,4 @@
   window.mode = "{{ mode }}";
 </script>
 <script src="{{ host_prefix }}/static/js/factgenie.js"></script>
+<script src="{{ host_prefix }}/static/js/utils.js"></script>
