--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -241,3 +241,4 @@
   window.model_outputs = {{ model_outputs | tojson | safe }};
 </script>
 <script src="{{ host_prefix }}/static/js/manage.js"></script>
+<script src="{{ host_prefix }}/static/js/utils.js"></script>
