--- a/factgenie/templates/outputs.html
+++ b/factgenie/templates/outputs.html
@@ -47,3 +47,4 @@
   // variable to be used in factgenie.js
   window.url_prefix = "{{ host_prefix }}";
 </script>
+<script src="{{ host_prefix }}/static/js/utils.js"></script>
