--- a/factgenie/templates/crowdsourcing.html
+++ b/factgenie/templates/crowdsourcing.html
@@ -35,7 +35,7 @@
       </div>
       {% endif %}
 
-      <h3><img src="{{ host_prefix }}/static/img/human_eval.png" class="heading-img-inline">
+      <h3><img src="{{ host_prefix }}/static/img/crowdsourcing.png" class="heading-img-inline">
         <b>List of crowdsourcing campaigns</b>
       </h3>
       <div id="campaigns">
