--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -44,7 +44,7 @@
         <div class="card text-center mt-3">
           <div class="card-body">
             <a href="{{ host_prefix }}/crowdsourcing">
-              <img src="{{ host_prefix }}/static/img/human_eval.png" class="intro-img">
+              <img src="{{ host_prefix }}/static/img/crowdsourcing.png" class="intro-img">
               <h5 class="card-title">Annotate with human annotators</h5>
             </a>
             <p class="card-text">Collect human annotations.</p>
@@ -80,7 +80,7 @@
               <img src="{{ host_prefix }}/static/img/manage.png" class="intro-img">
               <h5 class="card-title">Manage</h5>
             </a>
-            <p class="card-text">Manage datasets and model outputs.</p>
+            <p class="card-text">Manage data resources.</p>
           </div>
         </div>
       </div>
