--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -20,7 +20,7 @@
 
     <div class="mt-5">
       <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
-      <h3><img src="{{ host_prefix }}/static/img/human_eval.png" class="inline-icon"> <b>{{ campaign_id }}</b></h3>
+      <h3><img src="{{ host_prefix }}/static/img/crowdsourcing.png" class="inline-icon"> <b>{{ campaign_id }}</b></h3>
       <div id="metadata-block" class="mt-3">
         <hr>
         <dl class="row">
