--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -192,7 +192,7 @@
               dataset</a>
           </div>
         </div>
-        <div class="tab-pane fade show" id="pills-outputs" role="tabpanel" aria-labelledby="pills-outputs-tab">
+        <div class="tab-pane fade" id="pills-outputs" role="tabpanel" aria-labelledby="pills-outputs-tab">
           <div class="row g-3 mb-3 mt-3 align-items-center">
             <div class="col-auto">
               <span style="margin-left: 5px;">Dataset</span>
