--- a/factgenie/templates/forms/add_dataset_modal.html
+++ b/factgenie/templates/forms/add_dataset_modal.html
@@ -74,7 +74,8 @@
                             </div>
                         </form>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary mt-3" onclick="uploadDataset();">Add
+                            <button type="submit" id="upload-dataset-btn" class="btn btn-primary mt-3"
+                                onclick="uploadDataset();">Upload
                                 dataset</button>
                         </div>
 
