Minor label updates

--- a/factgenie/templates/llm_campaign_new.html
+++ b/factgenie/templates/llm_campaign_new.html
@@ -134,8 +134,7 @@
                   <i class="fa fa-user"></i>
                   <span style="margin-left: 5px; margin-right: 10px;">System message</span>
                   <div class="mb-2">
-                    <small class="form-text text-muted">For OpenAI API, this will be sent in the
-                      <code>system_message</code> parameter (optional).
+                    <small class="form-text text-muted">Role of the model (optional).
                     </small>
                   </div>
                 </div>
