--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -44,7 +44,7 @@
           <a onclick="pauseLLMCampaign('{{ campaign_id }}')" class="btn btn-outline-secondary" data-bs-toggle="tooltip"
             id="stop-button" title="Stop evaluation" {% if metadata.status!='running' %} style="display: none;" {% endif
             %}>
-            <i class="fa fa-pause"></i> Pause evaluation
+            <i class="fa fa-pause"></i> Pause {% if mode == 'llm_eval' %}evaluation{% else %}generation{% endif %}
           </a>
           <a href="{{ host_prefix }}/export_campaign_outputs?campaign={{ campaign_id }}&mode={{ mode }}"
             class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button" title="Export outputs" {% if
